--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-name: "Fraser Lab"
-description: "This is the official web page for the James Fraser Lab at UCSF."
+name: "Wang Lab"
+description: "This is the official web page for the Yong Wang Lab at ZJU."
 
-url: "http://fraserlab.com"
+url: "http://yongwangcph.github.io"
 
 paginate: 5
 plugins: [jekyll-paginate]
