--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,50 @@ markdown: kramdown
 kramdown:
   parse_block_html: true
 
+
+
+# Site Author
+author:
+  name             : "Yong Wang"
+  avatar           : "profile2.png"
+  bio              : "Computational biophysist and integrative structural modeller."
+  location         : "Copenhagen"
+  employer         :
+  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=yong+wang"
+  googlescholar    : "https://scholar.google.dk/citations?hl=en&user=LblGaZMAAAAJ"
+  email            : "wyongciac@gmail.com"
+  researchgate     : "https://www.researchgate.net/profile/Yong_Wang15"
+  uri              :
+  bitbucket        :  "yong_wang2014"
+  codepen          :
+  dribbble         :
+  flickr           :
+  facebook         :
+  foursquare       :
+  github           : "yongwangCPH"
+  google_plus      :
+  keybase          :
+  instagram        :
+  impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
+  lastfm           :
+  linkedin         : "https://www.linkedin.com/in/yong-wang-82939047"
+  orcid            : "https://orcid.org/0000-0001-9156-0377"
+  pinterest        :
+  soundcloud       :
+  stackoverflow    : # http://stackoverflow.com/users/123456/username
+  steam            :
+  tumblr           :
+  twitter          : "yongwangKU"
+  vine             :
+  weibo            :
+  xing             :
+  youtube          :
+  wikipedia        :
+
+
+
+
+
 exclude:
         - .sass-cache/
         - .jekyll-cache/
