--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: "Wang Lab"
+name: "Yong Wang@ZJU"
 description: "This is the official web page for the Yong Wang Lab at ZJU."
 
 url: "http://yongwangcph.github.io"
